
[TestChanges_MethodChanges/method_added - 1]
# Test: method_added

## Old Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    get:
      operationId: getUsers
      responses:
        '200':
          description: Success
```

## New Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    get:
      operationId: getUsers
      responses:
        '200':
          description: Success
    post:
      operationId: createUser
      requestBody:
        content:
          application/json:
            schema:
              type: object
              properties:
                name:
                  type: string
      responses:
        '201':
          description: Created
```

## Changes Detected:
* sdk.createUser(): **Added**

---

[TestChanges_MethodChanges/method_removed - 1]
# Test: method_removed

## Old Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    get:
      operationId: getUsers
      responses:
        '200':
          description: Success
    post:
      operationId: createUser
      responses:
        '201':
          description: Created
    delete:
      operationId: deleteAllUsers
      responses:
        '204':
          description: No Content
```

## New Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    get:
      operationId: getUsers
      responses:
        '200':
          description: Success
    post:
      operationId: createUser
      responses:
        '201':
          description: Created
```

## Changes Detected:
* sdk.deleteAllUsers(): **Deleted**

---

[TestChanges_MethodChanges/method_deprecated - 1]
# Test: method_deprecated

## Old Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    get:
      operationId: getUsers
      responses:
        '200':
          description: Success
```

## New Spec:
```yaml
openapi: 3.0.0
info:
  title: Test API
  version: 1.0.0
paths:
  /users:
    get:
      operationId: getUsers
      deprecated: true
      responses:
        '200':
          description: Success
```

## Changes Detected:
* sdk.getUsers(): **Deprecated**

---
